--- a/homepage.html
+++ b/homepage.html
@@ -141,18 +141,25 @@
   const errorImage = document.getElementById("error-image");
   let artifactInfo = "";
 
+  // Start scanning when the page loads
+  startScanning();
+
   // Function to start the camera and scan QR codes
-  async function startVideo() {
-        try {
-            const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } });
-            video.srcObject = stream;
-            video.setAttribute('playsinline', true); // required to play video inline on iOS
-            video.play();
-            requestAnimationFrame(scanQRCode);
-        } catch (error) {
-            console.error('Error accessing webcam:', error);
-        }
-    }
+  function startScanning() {
+    navigator.mediaDevices
+            .getUserMedia({
+              video: {
+                facingMode: "environment",
+              },
+            })
+            .then((stream) => {
+              video.srcObject = stream;
+              video.setAttribute("playsinline", true); // For iOS compatibility
+              video.play();
+              requestAnimationFrame(scanQRCode);
+            })
+            .catch((err) => console.error("Camera access error:", err));
+  }
 
   // Function to scan QR codes
   function scanQRCode() {
@@ -219,9 +226,14 @@
           console.log("Data:", data); // Log the data to inspect
 
           if (data) {
-            
-          // Build artifactInfo dynamically
+            // Build artifactInfo dynamically
+
           let artifactInfo = '';
+          // let title = '';
+
+          // if (data['Name'] && data['Name'] !== 'N/A') {
+          //   title = `${data['Name']}\n`;
+          // }
 
           if (data['Name'] && data['Name'] !== 'N/A') {
             artifactInfo += `${data['Name']}\n`;
@@ -313,7 +325,28 @@
     artifactBackground.setAttribute("visible", "true");
 }
 
-startVideo();
+function updatePositions() {
+    const artifactBackground = document.getElementById("artifact-background");
+    const textElement = document.getElementById("text");
+
+    // Get the current time
+    const time = Date.now() * 0.002;
+
+    // Calculate wave effect
+    const waveHeight = 0.1;
+    const frequency = 1;
+
+    // Calculate new positions
+    const backgroundY = Math.sin(time * frequency) * waveHeight;
+    const textY = Math.sin(time * frequency) * waveHeight;
+
+    // Update positions of background and text
+    artifactBackground.setAttribute("position", `0 ${1.65 + backgroundY} -3`);
+    textElement.setAttribute("position", `-0.5 ${1.65 + textY} -2.5`);
+
+    // Request the next frame
+    requestAnimationFrame(updatePositions);
+}
 </script>
 
 <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
