--- a/homepage.html
+++ b/homepage.html
@@ -172,6 +172,7 @@
       const code = jsQR(imageData.data, canvas.width, canvas.height);
 
       onQRCodeDetected(code);
+      drawBoxOnQRCode(canvas, canvasContext, code);
     }
     // Continue scanning
     requestAnimationFrame(scanQRCode);
@@ -198,27 +199,6 @@
     }
   }
 
-  // Function to show the overlay
-  function viewDetails() {
-    const overlay = document.getElementById("infoOverlay");
-    overlay.style.display = "flex";
-
-    let countdownTime = 8;
-    const countdownElement = document.getElementById("countdown");
-
-    // Update the countdown every second
-    const countdownInterval = setInterval(() => {
-      countdownTime--;
-      countdownElement.textContent = countdownTime;
-
-      // When countdown reaches 0, hide the overlay
-      if (countdownTime <= 0) {
-        clearInterval(countdownInterval);
-        overlay.style.display = "none";
-      }
-    }, 1000);
-  }
-
   function fetchArtifactInfo(artifactId) {
       fetch(`include/getArtifact.php?artifact_id=${artifactId}`)
         .then(response => response.json())
@@ -229,11 +209,6 @@
             // Build artifactInfo dynamically
 
           let artifactInfo = '';
-          // let title = '';
-
-          // if (data['Name'] && data['Name'] !== 'N/A') {
-          //   title = `${data['Name']}\n`;
-          // }
 
           if (data['Name'] && data['Name'] !== 'N/A') {
             artifactInfo += `${data['Name']}\n`;
@@ -264,7 +239,6 @@
 
           } else {
             // Handle the case where data is missing or empty
-            // artifactTitle.setAttribute("value", "");
             text.setAttribute("value", "");
             errorImage.setAttribute("visible", "true");
             artifactBackground.setAttribute("visible", "false");
@@ -275,11 +249,31 @@
           // Handle the error scenario
           errorImage.setAttribute("visible", "true");
           text.setAttribute("value", "");
-          // artifactTitle.setAttribute("value", "");
           artifactBackground.setAttribute("visible", "false");
           document.getElementById("watchVideosButton").style.display = "none";
         });
     }
+
+    // Function to show the overlay
+  function viewDetails() {
+    const overlay = document.getElementById("infoOverlay");
+    overlay.style.display = "flex";
+
+    let countdownTime = 8;
+    const countdownElement = document.getElementById("countdown");
+
+    // Update the countdown every second
+    const countdownInterval = setInterval(() => {
+      countdownTime--;
+      countdownElement.textContent = countdownTime;
+
+      // When countdown reaches 0, hide the overlay
+      if (countdownTime <= 0) {
+        clearInterval(countdownInterval);
+        overlay.style.display = "none";
+      }
+    }, 1000);
+  }
 
    // Function to detect screen width
    function checkDevice() {
@@ -346,6 +340,31 @@ function updatePositions() {
 
     // Request the next frame
     requestAnimationFrame(updatePositions);
+}
+
+function drawBoxOnQRCode(canvas, canvasContext, code) {
+    if (code) {
+        // Clear any previous drawings
+        canvasContext.clearRect(0, 0, canvas.width, canvas.height);
+
+        // Draw the QR code box
+        canvasContext.strokeStyle = "#FF0000"; // Red color for the box
+        canvasContext.lineWidth = 4; // Thickness of the box border
+
+        // Define the corners of the box
+        const { topLeftCorner, topRightCorner, bottomRightCorner, bottomLeftCorner } = code.location;
+
+        // Draw the rectangle around the QR code
+        canvasContext.beginPath();
+        canvasContext.moveTo(topLeftCorner.x, topLeftCorner.y);
+        canvasContext.lineTo(topRightCorner.x, topRightCorner.y);
+        canvasContext.lineTo(bottomRightCorner.x, bottomRightCorner.y);
+        canvasContext.lineTo(bottomLeftCorner.x, bottomLeftCorner.y);
+        canvasContext.closePath();
+
+        // Stroke the rectangle
+        canvasContext.stroke();
+    }
 }
 </script>
 
