--- a/homepage.html
+++ b/homepage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Homepage</title>
-  
+  <link rel="stylesheet" href="res/css/styles.css">
   <link rel="icon" href="assets/img/favicon.png" type="image/x-icon">
   <link href="assets/img/favicon.png" rel="icon">
   <link
@@ -38,7 +38,6 @@
   <video id="video" autoplay style="visibility: hidden"></video>
   <canvas id="canvas" style="visibility: hidden"></canvas>
 
-  <!-- Add AR components here -->
   <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;" device-orientation-permission-ui="enabled: false">
     <a-assets>
       <a-asset-item id="exoFont" src="./assets/fonts/exoBlack.typeface.json"></a-asset-item>
@@ -47,7 +46,7 @@
       <img id="artifactBackground" src="assets/img/artifact_background.png" alt="artifact background">
     </a-assets>
 
-    <!-- Add AR elements here -->
+    <!-- Add AR components here -->
     <a-image
             id="artifact-background"
             src="./assets/img/artifact_background.png"
@@ -76,6 +75,16 @@
     </a-image>
 
     <a-text
+            id="artifact-title"
+            font="./assets/fonts/Exo2Bold.fnt"
+            position="-0.5 2 -2.5"
+            width="1.25"
+            rotation="0 0 0"
+            wrap-count="25"
+            color="black">
+    </a-text>
+
+    <a-text
             id="text"
             font="./assets/fonts/Exo2Bold.fnt"
             position="-0.5 1.65 -2.5"
@@ -84,6 +93,7 @@
             wrap-count="25"
             color="black">
     </a-text>
+
   </a-scene>
 </main>
 
@@ -94,12 +104,12 @@
 <!-- Floating Buttons -->
 <button class="floating-button left" onclick="viewDetails()">i</button>
 <button
-    id="watchVideosButton"
-    onclick="window.location.href='igorot-dances.html';"
+        id="watchVideosButton"
+        onclick="window.location.href='igorot-dances.html';"
 >
 </button>
 
-<!-- Information Box -->
+<!-- Overlay with the info box -->
 <div class="overlay" id="infoOverlay">
   <div class="info-box">
     <p class="welcome-2">WELCOME!</p>
@@ -112,28 +122,24 @@
   </div>
 </div>
 
-<!-- Desktop Warning -->
 <div id="desktop-warning">
   Mobile Only Site.
 </div>
 
-<!-- Script cCode -->
 <script>
   // Run the function on load
   window.onload = checkDevice;
 
-  // Initialize Video and Canvas Elements
+  // Initialize video and canvas elements
   const video = document.getElementById("video");
   const canvas = document.getElementById("canvas");
-  const canvasContext = canvas.getContext("2d");
-
-  //AR Elements
-  const text = document.getElementById("text");
-  const errorImage = document.getElementById("error-image");
   const artifactBackground=document.getElementById("artifact-background");
-
-  let artifactInfo = "";
+  const canvasContext = canvas.getContext("2d");
+  const text = document.getElementById("text");
+  const artifactTitle = document.getElementById("artifact-title");
   let currentCodeData = null;
+  const errorImage = document.getElementById("error-image");
+  let artifactInfo = "";
 
   // Start scanning when the page loads
   startScanning();
@@ -148,8 +154,7 @@
             })
             .then((stream) => {
               video.srcObject = stream;
-              // For iOS compatibility
-              video.setAttribute("playsinline", true); 
+              video.setAttribute("playsinline", true); // For iOS compatibility
               video.play();
               requestAnimationFrame(scanQRCode);
             })
@@ -186,68 +191,14 @@
       // QR code not detected, reset or clear the display
       currentCodeData = null;
       text.setAttribute("value", "");
+      artifactTitle.setAttribute("value","");
       errorImage.setAttribute("visible", "false");
       artifactBackground.setAttribute("visible", "false");
       document.getElementById("watchVideosButton").style.display = "none";
     }
   }
 
-  function fetchArtifactInfo(artifactId) {
-      fetch(`include/getArtifact.php?artifact_id=${artifactId}`)
-        .then(response => response.json())
-        .then(data => {
-          // Log the data to inspect
-          console.log("Data:", data); 
-
-          if (data) {
-
-          // Build artifactInfo dynamically
-          let artifactInfo = '';
-
-          if (data['Name'] && data['Name'] !== 'N/A') {
-            artifactInfo += `${data['Name']}\n`;
-          }
-
-          if (data['Section Name'] && data['Section Name'] !== 'N/A') {
-            artifactInfo += `Section Name: ${data['Section Name']}\n`;
-          }
-
-          if (data['Catalogue Name'] && data['Catalogue Name'] !== 'N/A') {
-            artifactInfo += `Catalogue Name: ${data['Catalogue Name']}\n`;
-          }
-
-          if (data['Subcatalogue Name'] && data['Subcatalogue Name'] !== 'N/A') {
-            artifactInfo += `Subcatalogue Name: ${data['Subcatalogue Name']}\n`;
-          }
-
-          if (data['Description'] && data['Description'] !== 'No description available') {
-            artifactInfo += `Description: ${data['Description']}`;
-          }
-            text.setAttribute("value", artifactInfo);
-            artifactBackground.setAttribute("visible", "true");
-            document.getElementById("watchVideosButton").style.display = "block";
-
-            adjustTextAndBackground();
-            updatePositions();
-
-          } else {
-            // Handle the case where data is missing or empty
-            text.setAttribute("value", "");
-            errorImage.setAttribute("visible", "true");
-            artifactBackground.setAttribute("visible", "false");
-            document.getElementById("watchVideosButton").style.display = "none";
-          }
-        })
-        .catch(error => {
-          // Handle the error scenario
-          text.setAttribute("value", "");
-          errorImage.setAttribute("visible", "true");
-          artifactBackground.setAttribute("visible", "false");
-          document.getElementById("watchVideosButton").style.display = "none";
-        });
-    }
-
-    // Function to show the overlay
+  // Function to show the overlay
   function viewDetails() {
     const overlay = document.getElementById("infoOverlay");
     overlay.style.display = "flex";
@@ -268,21 +219,83 @@
     }, 1000);
   }
 
-   // Function to detect screen width
-   function checkDevice() {
-        // Define a breakpoint for mobile devices (e.g., 768px)
-        if (window.innerWidth > 768) {
-            // Show the overlay and alert the user
-            document.getElementById('desktop-warning').style.display = 'flex';
-            alert("Please use your mobile phone to access this site.");
-        }
+  function fetchArtifactInfo(artifactId) {
+    fetch(`include/getArtifact.php?artifact_id=${artifactId}`)
+            .then(response => response.json())
+            .then(data => {
+              console.log("Data:", data); // Log the data to inspect
+
+              if (data) {
+                // Build artifactInfo dynamically
+
+                let artifactInfo = '';
+                // let title = '';
+
+                // if (data['Name'] && data['Name'] !== 'N/A') {
+                //   title = `${data['Name']}\n`;
+                // }
+
+                if (data['Name'] && data['Name'] !== 'N/A') {
+                  artifactInfo += `${data['Name']}\n`;
+                }
+
+                if (data['Section Name'] && data['Section Name'] !== 'N/A') {
+                  artifactInfo += `Section Name: ${data['Section Name']}\n`;
+                }
+
+                if (data['Catalogue Name'] && data['Catalogue Name'] !== 'N/A') {
+                  artifactInfo += `Catalogue Name: ${data['Catalogue Name']}\n`;
+                }
+
+                if (data['Subcatalogue Name'] && data['Subcatalogue Name'] !== 'N/A') {
+                  artifactInfo += `Subcatalogue Name: ${data['Subcatalogue Name']}\n`;
+                }
+
+                if (data['Description'] && data['Description'] !== 'No description available') {
+                  artifactInfo += `Description: ${data['Description']}`;
+                }
+                // artifactTitle.setAttribute("value", title);
+                text.setAttribute("value", artifactInfo);
+                artifactBackground.setAttribute("visible", "true");
+                document.getElementById("watchVideosButton").style.display = "block";
+
+                adjustTextAndBackground();
+                updatePositions();
+
+              } else {
+                // Handle the case where data is missing or empty
+                // artifactTitle.setAttribute("value", "");
+                text.setAttribute("value", "");
+                errorImage.setAttribute("visible", "true");
+                artifactBackground.setAttribute("visible", "false");
+                document.getElementById("watchVideosButton").style.display = "none";
+              }
+            })
+            .catch(error => {
+              // Handle the error scenario
+              errorImage.setAttribute("visible", "true");
+              text.setAttribute("value", "");
+              // artifactTitle.setAttribute("value", "");
+              artifactBackground.setAttribute("visible", "false");
+              document.getElementById("watchVideosButton").style.display = "none";
+            });
+  }
+
+  // Function to detect screen width
+  function checkDevice() {
+    // Define a breakpoint for mobile devices (e.g., 768px)
+    if (window.innerWidth > 768) {
+      // Show the overlay and alert the user
+      document.getElementById('desktop-warning').style.display = 'flex';
+      alert("Please use your mobile phone to access this site.");
     }
+  }
 
-    // Optionally, rerun when the window is resized
-    window.onresize = checkDevice;
+  // Optionally, rerun when the window is resized
+  window.onresize = checkDevice;
 
-    function adjustTextAndBackground() {
-    const textElement = document.getElementById("text");
+  function adjustTextAndBackground() {
+    const textElement = document.getElementById("text"); // Changed to target the text element directly
     const artifactBackground = document.getElementById("artifact-background");
 
     // Get the text content
@@ -310,9 +323,9 @@
 
     // Make the background visible
     artifactBackground.setAttribute("visible", "true");
-}
+  }
 
-function updatePositions() {
+  function updatePositions() {
     const artifactBackground = document.getElementById("artifact-background");
     const textElement = document.getElementById("text");
 
@@ -333,7 +346,7 @@ function updatePositions() {
 
     // Request the next frame
     requestAnimationFrame(updatePositions);
-}
+  }
 </script>
 
 <script src="https://cubism.live2d.com/sdk-web/cubismcore/live2dcubismcore.min.js"></script>
