--- a/tts.html
+++ b/tts.html
@@ -13,72 +13,13 @@
 <select id="voiceSelect"></select>
 <br><br>
 
-<!-- Buttons to select which TTS engine to use -->
-<button onclick="toggleTTSEngine()">Toggle TTS Engine (Current: <span id="tts-engine">Speak.js</span>)</button>
-<br><br>
+<!-- Button to trigger the speech synthesis -->
 <button onclick="speakText()">Speak Test Phrase</button>
 
 <script>
-    let useNativeTTS = false; // Switch between native TTS and speakWorker.js
-    const ttsEngineLabel = document.getElementById('tts-engine');
     const voiceSelect = document.getElementById('voiceSelect');
 
-    // Initialize the speakWorker.js engine (WebAssembly) for TTS
-    const speakWorker = new Worker('/res/js/client/speakWorker.js'); // Update this path with the correct location of speakWorker.js
-
-    // Function to toggle between native TTS and speakWorker.js
-    function toggleTTSEngine() {
-        useNativeTTS = !useNativeTTS;
-        ttsEngineLabel.textContent = useNativeTTS ? 'Speech Synthesis' : 'Speak.js';
-    }
-
-    // Function to generate audio from text using speak.js
-    function generateTTS(text, callback) {
-        const message = {
-            text: text,
-            amplitude: 200,   // Volume (0-200)
-            wordgap: 1,       // Gap between words
-            pitch: 60,        // Pitch (0-100)
-            speed: 175,       // Speed (words per minute)
-            voice: 'en',      // Language code (adjust to your needs)
-            base64: true      // Get base64-encoded output
-        };
-
-        // Use the worker to process the text
-        speakWorker.postMessage(message);
-
-        // When speakWorker finishes, call the provided callback with the audio data
-        speakWorker.onmessage = function (event) {
-            callback(event.data);
-        };
-    }
-
-    // Function to play audio in the browser using AudioContext
-    function playTTS(audioData) {
-        if (!(audioData instanceof Uint8Array)) {
-            console.error("Invalid audio data received:", audioData);
-            return;
-        }
-
-        const audioContext = new (window.AudioContext || window.webkitAudioContext)();
-
-        audioContext.decodeAudioData(audioData.buffer, function (buffer) {
-            let source = audioContext.createBufferSource();
-            source.buffer = buffer;
-            source.connect(audioContext.destination);
-
-            // Ensure the AudioContext is resumed (required for iOS)
-            audioContext.resume().then(() => {
-                source.start(0); // Play the audio
-            }).catch((err) => {
-                console.error("Error resuming AudioContext:", err);
-            });
-        }, function (error) {
-            console.error("Error decoding audio data:", error);
-        });
-    }
-
-    // Native Speech Synthesis API with selectable voice
+    // Function to speak the provided text using the selected voice
     function speakWithNativeTTS(text) {
         const synth = window.speechSynthesis;
         const utterance = new SpeechSynthesisUtterance(text);
@@ -94,20 +35,12 @@
         synth.speak(utterance);
     }
 
-    // Function to handle the TTS generation and playback
+    // Function to speak a test phrase
     function speakText() {
-        const text = "mic test, mic test, 1. 2."; // The text to be spoken
+        const text = "Mic test, mic test, 1. 2."; // The text to be spoken
 
-        if (useNativeTTS) {
-            // Use native Speech Synthesis API
-            speakWithNativeTTS(text);
-        } else {
-            // Generate TTS audio using speakWorker.js
-            generateTTS(text, function (audioData) {
-                // Play the generated TTS audio
-                playTTS(audioData);
-            });
-        }
+        // Use native Speech Synthesis API
+        speakWithNativeTTS(text);
     }
 
     // Populate the voice select dropdown with available voices
