--- a/scanner.html
+++ b/scanner.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Scanner with AR</title>
-    <script src="res/js/jsQR.js"></script>
+    <script src="res/js/client/jsQR.js"></script>
     <style>
         #video {
             width: 100%;
@@ -19,19 +19,6 @@
             width: 100%;
             height: 100%;
             pointer-events: none;
-        }
-
-        #result {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            color: white;
-            font-size: 15px;
-            font-weight: bold;
-            background-color: #FAC301;
-            font-family: Arial, sans-serif;
-            padding: 10px;
-            border-radius: 5px;
         }
 
         .floating-button {
@@ -172,10 +159,8 @@
 <body>
 
 <!-- AR Elements -->
-<video id="video" autoplay></video>
+<video id="video"></video>
 <canvas id="canvas"></canvas>
-<div id="result">Scan a QR code</div>
-<img id="noArtifactImage" src="assets/img/Error.png" alt="No Artifact Found">
 
 <!-- Floating Buttons -->
 <button class="floating-button left" onclick="viewDetails()">i</button>
@@ -202,7 +187,6 @@
     const video = document.getElementById('video');
     const canvas = document.getElementById('canvas');
     const canvasContext = canvas.getContext('2d');
-    const resultDiv = document.getElementById('result');
     const noArtifactImage = document.getElementById('noArtifactImage');
 
     let artifactInfo = "";
@@ -237,7 +221,6 @@
 
             if (code) {
                 const artifactId = code.data;
-                resultDiv.textContent = `Artifact ID: ${artifactId}`;
                 fetchArtifactInfo(artifactId);
 
                 if (displayBox) { // Check if the box should be displayed
@@ -299,7 +282,6 @@
                     }
                 }
             } else {
-                resultDiv.textContent = 'No QR code detected';
                 document.getElementById("watchVideosButton").style.display = "none";
                 artifactInfo = '';
             }
