--- a/admin/admin.html
+++ b/admin/admin.html
@@ -108,7 +108,7 @@
 
                 <div id="add" class="tab-content">
                     <div class="form-container">
-                        <form action="/include/addArtifact.phpd" method="post"> <!--add database here i think??? .php, action="-here-" "/include/addArtifact.php"-->
+                        <form action="/include/addArtifact.php" method="post"> <!--add database here i think??? .php, action="-here-" "/include/addArtifact.php"-->
                             <div class="form-group">
                                 <label for="artifact-name">Artifact Name:</label>
                                 <input type="text" id="artifact-name" name="artifact-name" required>
@@ -159,56 +159,61 @@
 
                 <div id="add2" class="tab-content">
                     <div class="form-container">
-                        <form action="/include/addArtifact.phpd" method="post"> <!--add database here i think??? .php, action="-here-" "/include/addArtifact.php"-->
+                        <form action="/include/addCategory.php" method="post"> <!--add database here i think??? .php, action="-here-" "/include/addArtifact.php"-->
                             <h3 style="text-align: center;">Add New Section</h3>
 
+                            <!-- Form for Adding New Section -->
                             <div class="form-group">
-                                <label for="new-section">New Section Title:</label>
-                                <input type="text" id="add-new-section" name="new-section" required>
+                                <label for="create-new-section">New Section Title:</label>
+                                <input type="text" id="create-new-section" name="new_section">
                             </div>
-
                             <div class="button-container">
-                                <button type="submit" class="btn">Create Section</button>
+                                <button type="submit" name="action" value="create_section" class="btn">Create Section</button>
                             </div>
 
                             <h1> </h1>
                             <hr>
 
+                        <!-- Form for Adding New Catalog -->
                             <h3 style="text-align: center;">Add New Catalog</h3>
 
                             <div class="form-group">
-                                <label for="new-section">Choose Section:</label>
-                                <select id="select-section" name="section" required>
+                                <label for="create-select-section">Choose Section:</label>
+                                <select id="create-select-section" name="section_id">
+                                    <option value="">Select Section</option>
                                 </select>
                             </div>
 
                             <div class="form-group">
-                                <label for="new-section">New Catalog Name:</label>
-                                <input type="text" id="add-new-catalog" name="new-catalog" required>
+                                <label for="create-new-catalog">New Catalog Name:</label>
+                                <input type="text" id="create-new-catalog" name="new_catalog">
                             </div>
 
                             <div class="button-container">
-                                <button type="submit" class="btn">Create Catalog</button>
+                                <button type="submit" name="action" value="create_catalog" class="btn">Create Catalog</button>
                             </div>
 
-                            <h1> </h1>
+
+                        <h1> </h1>
                             <hr>
 
+                        <!-- Form for Adding New Sub Catalog -->
                             <h3 style="text-align: center;">Add New Subcatalog</h3>
 
                             <div class="form-group">
-                                <label for="add-new-catalog">Choose Catalog:</label>
-                                <select id="select-catalog" name="catalog" required>
+                                <label for="create-select-catalog">Choose Catalog:</label>
+                                <select id="create-select-catalog" name="catalogue_id">
+                                    <option value="">Select Catalog</option>
                                 </select>
                             </div>
 
                             <div class="form-group">
-                                <label for="new-section">New Subcatalog Name:</label>
-                                <input type="text" id="new-section" name="new-sub-cat" required>
+                                <label for="create-new-subcatalog">New Subcatalog Name:</label>
+                                <input type="text" id="create-new-subcatalog" name="new_subcatalog">
                             </div>
 
                             <div class="button-container">
-                                <button type="submit" class="btn">Create Subcatalog</button>
+                                <button type="submit" name="action" value="create_subcatalog" class="btn">Create Subcatalog</button>
                             </div>
 
                         </form>
@@ -307,6 +312,7 @@
             <div class="form-group">
                 <label for="add-new-catalog">Choose Catalog:</label>
                 <select id="select-catalog" name="catalog" required>
+                    <option value="">Select Catalog</option>
                 </select>
             </div>
 
@@ -321,5 +327,45 @@
         </div>
     </div>
     <script src="/res/js/admin/admin.js"></script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            fetch('/include/get.php') // Adjust the path if necessary
+                .then(response => response.json())
+                .then(data => {
+                    const sectionSelect = document.getElementById("create-select-section");
+                    const sections = data.sections;
+
+                    sections.forEach(section => {
+                        const option = document.createElement("option");
+                        option.value = section.section_id;
+                        option.text = section.section_name;
+                        sectionSelect.appendChild(option);
+                    });
+                })
+                .catch(error => {
+                    console.error("Error fetching sections:", error);
+                });
+        });
+
+        document.addEventListener("DOMContentLoaded", function() {
+        fetch('/include/get.php') // Adjust the path if necessary
+            .then(response => response.json())
+            .then(data => {
+                const catalogSelect = document.getElementById("create-select-catalog");
+                const catalogues = data.catalogues;
+
+                catalogues.forEach(catalog => {
+                    const option = document.createElement("option");
+                    option.value = catalog.catalogue_id;
+                    option.text = catalog.catalogue_name;
+                    catalogSelect.appendChild(option);
+                });
+            })
+            .catch(error => {
+                console.error("Error fetching catalogues:", error);
+            });
+        });
+    </script>
 </body>
 </html>
